website/websites/u64q/code/pystone.1.pyston.log

 Wed, 28 Sep 2022 09:30:24 GMT

COMMAND LINE:
 /usr/bin/pyston pystone.pyston 50000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "pystone.pyston", line 62
    print loops
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(loops)?
